@@ -1,5 +1,10 @@
 2008-06-21  Tim Vandermeersch <tim.vandermeersch@gmail.com>
 
+	* src/chains.cpp: Assign HOH and ligands to separate residues.
+	(#1774776)
+
+2008-06-21  Tim Vandermeersch <tim.vandermeersch@gmail.com>
+
 	* src/formats/atomrecord.cpp: Keep original chain ID (#1760959).
 
 2008-06-21  Carsten Niehaus  <cniehaus@kde.org>
